refactor: Updated nav bar wth absolute links

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/output.css">
+  <link rel="stylesheet" href="/css/output.css">
   <title>/usr/philiph/</title>
 </head>
 
 <body class="bg-nord-0 text-nord-6">
-  <nav class="flex h-16 w-100 px-4 py-4 justify-around ">
-    <a href="#" class="px-4 border-b-4 border-nord-7">~/</a>
-    <a href="#" class="px-4 hover:border-b-4 hover:border-nord-7 transition">~/projects</a>
-    <a href="#" class="px-4 hover:border-b-4 hover:border-nord-7 transition">~/blog</a>
-    <a href="#" class="px-4 hover:border-b-4 hover:border-nord-7 transition">~/contact</a>
+  <nav class="h-16 flex justify-around box-border">
+    <a href="/" class="px-4 h-full flex items-center border-b-4 border-nord-7">~/</a>
+    <a href="/projects" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/projects</a>
+    <a href="/blog" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/blog</a>
+    <a href="/contact"" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/contact</a>
   </nav>
 
   <main class="container mx-auto flex flex-col gap-8 md:pt-32">
