feat: Added timeline content

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,12 @@
 <body class="bg-nord-0 text-nord-6">
   <nav class="h-16 flex justify-around box-border">
     <a href="/" class="px-4 h-full flex items-center border-b-4 border-nord-7">~/</a>
-    <a href="/projects" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/projects</a>
-    <a href="/blog" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/blog</a>
-    <a href="/contact"" class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/contact</a>
+    <a href="/projects"
+      class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/projects</a>
+    <a href="/blog"
+      class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/blog</a>
+    <a href="/contact"" class=" px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7
+      transition">~/contact</a>
   </nav>
 
   <main class="container mx-auto flex flex-col gap-8 md:pt-32">
@@ -34,37 +37,80 @@
   </main>
 
   <section class="container mx-auto my-32">
-    <h2 class="text-4xl uppercase font-bold text-center mb-16">Timeline</h2>
+    <h2 class="text-4xl uppercase font-bold text-center mb-16">
+      Timeline
+      <span class="stroke-nord-6">
+        <svg class="inline-block" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </span>
+      
+    </h2>
 
     <ol class="relative border-s border-nord-8 mx-8">
       <li class="mb-10 ms-4">
-        <div
-          class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
+        <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">February 2022</time>
-        <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Application UI code in Tailwind CSS</h3>
-        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get access to over 20+ pages including a
-          dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.
+        <time class="mb-1 text-sm text-nord-4">2020-Present</time>
+        <h3 class="text-lg font-semibold">CS Highschool Teacher @ Father Michael Goetz CSS</h3>
+        <p class="mb-4 text-nord-4">
+          I began my teaching career in November 2020 teaching senior math and junior business in the height of the
+          pandemic. In February of 2021, I became a full-time permanent teacher at <em>Father Michael Goetz Catholic
+            Secondary School</em> where I now teach JavaScript, GameMaker Language, Python, Java, and C# to highschool
+          students.
         </p>
       </li>
+
       <li class="mb-10 ms-4">
-        <div
-          class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
+        <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">March 2022</time>
-        <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Marketing UI design in Figma</h3>
-        <p class="text-base font-normal text-gray-500 dark:text-gray-400">All of the pages and components are first
-          designed in Figma and we keep a parity between the two versions even as we update the project.</p>
+        <time class="mb-1 text-sm text-nord-4">2018-2020</time>
+        <h3 class="text-lg font-semibold">Teacher's College @ York University</h3>
+        <p class="mb-4 text-nord-4">
+          I completed my Bachelors In Education with the primary intention to emmerse myself in the study of pedagogy in
+          the hopes of changing the ways new developpers are on-boarded to new companies, tech-stacks and new ways of
+          thinking.
+        </p>
       </li>
-      <li class="ms-4">
-        <div
-          class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
+
+      <li class="mb-10 ms-4">
+        <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">April 2022</time>
-        <h3 class="text-lg font-semibold text-gray-900 dark:text-white">E-Commerce UI code in Tailwind CSS</h3>
-        <p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and
-          interactive elements built on top of Tailwind CSS.</p>
+        <time class="mb-1 text-sm text-nord-4">2017-2021</time>
+        <h3 class="text-lg font-semibold">Coding Teacher @ Reidmount Discovery Schools</h3>
+        <p class="mb-4 text-nord-4">
+          I began a new job as a Coding Teacher for <em>Reidmount Discovery Schools</em> teaching students between the
+          ages of 6 to 17 the fundamentals of coding, including concepts like computatoinal thinking, logic and problem
+          solving, using Python and Unity.
+        </p>
       </li>
+
+      <li class="mb-10 ms-4">
+        <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
+        </div>
+        <time class="mb-1 text-sm text-nord-4">2013-2017</time>
+        <h3 class="text-lg font-semibold">Undergrad in CS @ McMaster University</h3>
+        <p class="mb-4 text-nord-4">
+          I studied Computer Science at McMaster university. During my time there, I was an undergraduate <em>TA</em>
+          for a first year intro to coding class, participated in Hack-a-thons, and completed a one year Capstone
+          projects focusing on Computer Vision and data interpretation to help make basketball players better at their
+          free throws.
+        </p>
+      </li>
+
+      <li class="mb-10 ms-4">
+        <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
+        </div>
+        <time class="mb-1 text-sm text-nord-4">2009-2013</time>
+        <h3 class="text-lg font-semibold">Highschool Student @ Cardinal Leger CSS</h3>
+        <p class="mb-4 text-nord-4">
+          I fell in love with Computer Science at the age of 15 when I took the grade 11 ICS3U course in my grade 10
+          year. In grade 10 I participated in the ECOO coding competition, and I would go on to compete in CCC, DWITE,
+          and ECOO for every year I had remaining in high school.
+        </p>
+      </li>
+
     </ol>
 
 
