feat: Added project details

--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -36,11 +36,14 @@
         </div>
       </div>
       <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p><br>More text below Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro inventore ullam itaque
-          alias pariatur voluptates? Placeat voluptas cum natus? Voluptatibus eum eaque nisi magnam corrupti aspernatur
-          sequi adipisci optio harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, qui. Earum
-          soluta modi voluptatem possimus dolores voluptatum est, eaque veritatis labore atque ipsam magni vel deserunt
-          minus, quae veniam iure.</p>
+        <p>
+          <br>
+          Pycs is an autograder solution designed to simplify the assignment submission and grading process
+          for both students and myself. Developed using Flask and integrated with Pytest and Junit5, Pycs
+          allows students to register, sign in securely, join classes, view assignments, submit their work,
+          and receive grades along with detailed feedback. Pycs was created to aid in the pedagogical practice
+          of "learning to mastery", enabling students unlimited attempts to solve the problem at hand.
+        </p>
       </div>
       <button data-projects="more-info-button"
         class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
@@ -58,7 +61,9 @@
         <div class="size-[52px] bg-nord-15 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
-            <a href="http://ezpz.netlify.app" target="_blank" class="underline hover:text-nord-8">FollowThrough↗</a>
+            <a href="https://github.com/philip-h/FollowThrough-" target="_blank" class="underline hover:text-nord-8">
+              FollowThrough-↗
+            </a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             Laravel + Python + OpenCV
@@ -66,11 +71,112 @@
         </div>
       </div>
       <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro inventore ullam itaque
-          alias pariatur voluptates? Placeat voluptas cum natus? Voluptatibus eum eaque nisi magnam corrupti aspernatur
-          sequi adipisci optio harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, qui. Earum
-          soluta modi voluptatem possimus dolores voluptatum est, eaque veritatis labore atque ipsam magni vel deserunt
-          minus, quae veniam iure.</p>
+        <p>
+          <br />
+          For a final year capstone project, our group created FollowThrough: a prototype for a basketball
+          shot analyzer that helps players improve their free throw shot. As the lead software developper, I
+          was in charge of ball detection using OpenCV, a Support Vector Machine model for initial ball
+          detection and Mean Shift for movement tracking.
+        </p>
+      </div>
+      <button data-projects="more-info-button"
+        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
+        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </button>
+    </div> <!-- !card -->
+
+    <!-- card -->
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+      <div class="flex gap-8">
+        <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
+        <div class="size-[52px] bg-nord-13 rounded-full"></div>
+        <div>
+          <h3 class="text-lg font-bold">
+            <a href="" target="_blank" class="underline hover:text-nord-8">
+              VueRecipes↗
+            </a>
+          </h3>
+          <p class="text-nord-6 text-opacity-50">
+            VueJS + Express + KnexJS
+          </p>
+        </div>
+      </div>
+      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
+        <p>
+          <br />
+          VueRecipes is a client + server recipes app that allows users to sign up, view recipes created by
+          other users, favourite recipes, and of course, create your own. All the data is stored efficiently
+          in a Postgres Database satisfying 3NF normalization.
+        </p>
+      </div>
+      <button data-projects="more-info-button"
+        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
+        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </button>
+    </div> <!-- !card -->
+
+    <!-- card -->
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+      <div class="flex gap-8">
+        <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
+        <div class="size-[52px] bg-nord-13 rounded-full"></div>
+        <div>
+          <h3 class="text-lg font-bold">
+            <a href="https://github.com/philip-h/4f03_pas/tree/master/pa5" target="_blank"
+              class="underline hover:text-nord-8">
+              CudaBlurr↗
+            </a>
+          </h3>
+          <p class="text-nord-6 text-opacity-50">
+            C++ + Cuda
+          </p>
+        </div>
+      </div>
+      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
+        <p>
+          <br />
+          In fourth year of university, we developped a C++ to blur a 4K image using a Nvidia GPU and Cuda.
+          CudaBlurr features GPU multi-threading to blur a ppm image.
+        </p>
+      </div>
+      <button data-projects="more-info-button"
+        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
+        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </button>
+    </div> <!-- !card -->
+
+    <!-- card -->
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+      <div class="flex gap-8">
+        <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
+        <div class="size-[52px] bg-nord-13 rounded-full"></div>
+        <div>
+          <h3 class="text-lg font-bold">
+            <a href="https://github.com/philip-h/cgol" target="_blank" class="underline hover:text-nord-8">
+              Conway's Game Of Life↗
+            </a>
+          </h3>
+          <p class="text-nord-6 text-opacity-50">
+            C++ + SDL
+          </p>
+        </div>
+      </div>
+      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
+        <p>
+          <br />
+          Conway's game of life implemented in C++ and the SDL graphics library. This project was done with
+          the help of <a href="https://lazyfoo.net/tutorials/SDL/" target="_blank"
+            class="underline hover:text-nord-8">lazyfoo.net/tutorials/SDL/ ↗</a>
+        </p>
       </div>
       <button data-projects="more-info-button"
         class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
