feat: Added contact details

--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -19,7 +19,7 @@
       class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/contact</a>
   </nav>
 
-  <main class="container mx-auto flex flex-col gap-8 md:pt-16">
+  <main class="container flex flex-col gap-8 md:pt-16 pt-8">
 
     <!-- card -->
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
