--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
       class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/projects</a>
     <a href="/blog"
       class="px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7 transition">~/blog</a>
-    <a href="/contact"" class=" px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7
+    <a href="/contact" class=" px-4 h-bull flex items-center border-b-4 border-transparent hover:border-nord-7
       transition">~/contact</a>
   </nav>
 
-  <main class="container mx-auto flex flex-col gap-8 md:pt-32">
+  <main class="container flex flex-col gap-8 md:pt-32 pt-8">
     <div class="flex flex-col-reverse md:flex-row gap-8 justify-around items-center w-full">
       <h1 class="text-5xl uppercase text-center">The best way to learn <br /> is to <span
           class="text-nord-7">teach</span></h1>
@@ -31,8 +31,11 @@
       </div>
     </div>
     <div class="mx-auto">
-      <button class="bg-nord-7 px-16 py-4 rounded-lg font-bold hover:bg-nord-8 hover:shadow-lg transition">Work
-        with me</button>
+      <button class="bg-nord-7 px-16 py-4 rounded-lg font-bold hover:bg-nord-8 hover:shadow-lg transition">
+        <a href="/contact">
+          Work with me
+        </a>
+      </button>
     </div>
   </main>
 
@@ -41,11 +44,11 @@
       Timeline
       <span class="stroke-nord-6">
         <svg class="inline-block" width="24" height="24" viewBox="0 0 24 24" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-      </svg>
-    </span>
-      
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </span>
+
     </h2>
 
     <ol class="relative border-s border-nord-8 mx-8">
