--- a/src/index.html
+++ b/src/index.html
@@ -39,15 +39,12 @@
     </div>
   </main>
 
-  <section class="container mx-auto my-32">
-    <h2 class="text-4xl uppercase font-bold text-center mb-16">
+  <section class="container my-32">
+    <h2 class="flex justify-center items-center gap-4 text-4xl uppercase font-bold text-center mb-16">
       Timeline
-      <span class="stroke-nord-6">
-        <svg class="inline-block" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-      </span>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+      </svg>
 
     </h2>
 
