--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -25,7 +25,6 @@
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
       <div class="flex gap-8">
         <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
-        <div class="size-[52px] bg-nord-11 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
             <a href="http://philiph.dev" target="_blank" class="underline hover:text-nord-8">PYCS↗</a>
@@ -46,10 +45,10 @@
         </p>
       </div>
       <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
-        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-4 pointer-events-none">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
       </button>
     </div> <!-- !card -->
@@ -58,7 +57,6 @@
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
       <div class="flex gap-8">
         <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
-        <div class="size-[52px] bg-nord-15 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
             <a href="https://github.com/philip-h/FollowThrough-" target="_blank" class="underline hover:text-nord-8">
@@ -80,11 +78,12 @@
         </p>
       </div>
       <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
-        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-4 pointer-events-none">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
+
       </button>
     </div> <!-- !card -->
 
@@ -92,7 +91,6 @@
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
       <div class="flex gap-8">
         <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
-        <div class="size-[52px] bg-nord-13 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
             <a href="" target="_blank" class="underline hover:text-nord-8">
@@ -113,10 +111,10 @@
         </p>
       </div>
       <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
-        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
       </button>
     </div> <!-- !card -->
@@ -125,7 +123,6 @@
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
       <div class="flex gap-8">
         <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
-        <div class="size-[52px] bg-nord-13 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
             <a href="https://github.com/philip-h/4f03_pas/tree/master/pa5" target="_blank"
@@ -146,10 +143,10 @@
         </p>
       </div>
       <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
-        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-4 pointer-events-none">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
       </button>
     </div> <!-- !card -->
@@ -158,7 +155,6 @@
     <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
       <div class="flex gap-8">
         <!-- <img src="/imgs/me.webp" width="50" alt="me" class="rounded-full"> -->
-        <div class="size-[52px] bg-nord-13 rounded-full"></div>
         <div>
           <h3 class="text-lg font-bold">
             <a href="https://github.com/philip-h/cgol" target="_blank" class="underline hover:text-nord-8">
@@ -179,10 +175,10 @@
         </p>
       </div>
       <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center">
-        <svg class="pointer-events-none" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="m7 10 5 5 5-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-4 pointer-events-none">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
       </button>
     </div> <!-- !card -->
