fix: The project cards now transition on hover like the nav

--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body class="bg-nord-0 text-nord-6">
-    <nav class="flex flex-col md:flex-row bg-nord-3 p-4 font-mono group">
+  <nav class="flex flex-col md:flex-row bg-nord-3 p-4 font-mono group">
     <div class="flex justify-between">
       <h2 class="font-mono text-2xl font-bold">
         <a href="/" class="text-nord-8">PHILIPH.DEV/</a>
       </h2>
-      <div class="rounded-full p-2 transition-transform group-hover:rotate-180 md:hidden">
+      <div class="transition-transform group-hover:rotate-180 md:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-6 pointer-events-none">
+          class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
       </div>
@@ -55,19 +55,21 @@
   <main class="container flex flex-col gap-8 md:pt-16 pt-8 flex-grow">
 
     <!-- card -->
-    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative group">
+
       <div class="flex gap-8">
         <div>
           <h3 class="text-lg font-bold">
-            <a href="http://philiph.dev" target="_blank" class="underline hover:text-nord-8">PYCS↗</a>
+            <a href="http://philiph.dev" target="_blank" class="underline hover:text-nord-8">PYCS</a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             Python + Flask + SQLite
           </p>
         </div>
       </div>
-      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p>
+
+      <div class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows]">
+        <p class="overflow-hidden">
           <br>
           Pycs is an autograder solution designed to simplify the assignment submission and grading process
           for both students and myself. Developed using Flask and integrated with Pytest and Junit5, Pycs
@@ -76,142 +78,125 @@
           of "learning to mastery", enabling students unlimited attempts to solve the problem at hand.
         </p>
       </div>
-      <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold stroke-nord-6 rounded-full hover:bg-nord-4 hover:stroke-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+      <div class="absolute right-4 bottom-4 group-hover:rotate-180 transition-transform">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-4 pointer-events-none">
+          class="size-4">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
-      </button>
+      </div>
     </div> <!-- !card -->
 
     <!-- card -->
-    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative group">
       <div class="flex gap-8">
         <div>
           <h3 class="text-lg font-bold">
-            <a href="https://github.com/philip-h/FollowThrough-" target="_blank" class="underline hover:text-nord-8">
-              FollowThrough-↗
-            </a>
+            <a href="https://github.com/philip-h/FollowThrough-" target="_blank" class="underline hover:text-nord-8">FollowThrough</a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             Laravel + Python + OpenCV
           </p>
         </div>
       </div>
-      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p>
-          <br />
+      <div class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows]">
+        <p class="overflow-hidden">
+          <br>
           For a final year capstone project, our group created FollowThrough: a prototype for a basketball
           shot analyzer that helps players improve their free throw shot. As the lead software developper, I
           was in charge of ball detection using OpenCV, a Support Vector Machine model for initial ball
           detection and Mean Shift for movement tracking.
         </p>
       </div>
-      <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+      <div class="absolute right-4 bottom-4 group-hover:rotate-180 transition-transform">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-4 pointer-events-none">
+          class="size-4">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
-
-      </button>
+      </div>
     </div> <!-- !card -->
 
     <!-- card -->
-    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative group">
       <div class="flex gap-8">
         <div>
           <h3 class="text-lg font-bold">
-            <a href="" target="_blank" class="underline hover:text-nord-8">
-              VueRecipes↗
-            </a>
+            <a href="" target="_blank" class="underline hover:text-nord-8">VueRecipes</a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             VueJS + Express + KnexJS
           </p>
         </div>
       </div>
-      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p>
-          <br />
+      <div class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows]">
+        <p class="overflow-hidden">
+          <br>
           VueRecipes is a client + server recipes app that allows users to sign up, view recipes created by
           other users, favourite recipes, and of course, create your own. All the data is stored efficiently
           in a Postgres Database satisfying 3NF normalization.
         </p>
       </div>
-      <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+      <div class="absolute right-4 bottom-4 group-hover:rotate-180 transition-transform">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
           class="size-4">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
-      </button>
+      </div>
     </div> <!-- !card -->
 
     <!-- card -->
-    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative group">
       <div class="flex gap-8">
         <div>
           <h3 class="text-lg font-bold">
-            <a href="https://github.com/philip-h/4f03_pas/tree/master/pa5" target="_blank"
-              class="underline hover:text-nord-8">
-              CudaBlurr↗
-            </a>
+            <a href="https://github.com/philip-h/4f03_pas/tree/master/pa5" target="_blank" class="underline hover:text-nord-8">CudaBlur</a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             C++ + Cuda
           </p>
         </div>
       </div>
-      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p>
-          <br />
+      <div class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows]">
+        <p class="overflow-hidden">
+          <br>
           In fourth year of university, we developped a C++ to blur a 4K image using a Nvidia GPU and Cuda.
           CudaBlurr features GPU multi-threading to blur a ppm image.
         </p>
       </div>
-      <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+      <div class="absolute right-4 bottom-4 group-hover:rotate-180 transition-transform">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-4 pointer-events-none">
+          class="size-4">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
-      </button>
+      </div>
     </div> <!-- !card -->
 
     <!-- card -->
-    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative">
+    <div class="bg-nord-3 rounded-lg shadow-lg p-4 flex flex-col relative group mb-8">
       <div class="flex gap-8">
         <div>
           <h3 class="text-lg font-bold">
-            <a href="https://github.com/philip-h/cgol" target="_blank" class="underline hover:text-nord-8">
-              Conway's Game Of Life↗
-            </a>
+            <a href="https://github.com/philip-h/cgol" target="_blank" class="underline hover:text-nord-8">Conway's Game Of Life</a>
           </h3>
           <p class="text-nord-6 text-opacity-50">
             C++ + SDL
           </p>
         </div>
       </div>
-      <div class="overflow-y-hidden transition-[max-height] duration-300 max-h-0" data-projects="more-info">
-        <p>
-          <br />
+      <div class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows]">
+        <p class="overflow-hidden">
+          <br>
           Conway's game of life implemented in C++ and the SDL graphics library. This project was done with
           the help of <a href="https://lazyfoo.net/tutorials/SDL/" target="_blank"
-            class="underline hover:text-nord-8">lazyfoo.net/tutorials/SDL/ ↗</a>
+            class="underline hover:text-nord-8">lazyfoo.net/tutorials/SDL/</a>
         </p>
       </div>
-      <button data-projects="more-info-button"
-        class="absolute right-4 bottom-4 font-bold text-nord-6 rounded-full hover:bg-nord-4 hover:text-nord-3 transition-[colors,_transform] duration-300 flex items-center justify-center p-1">
+      <div class="absolute right-4 bottom-4 group-hover:rotate-180 transition-transform">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="size-4 pointer-events-none">
+          class="size-4">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
-      </button>
+      </div>
     </div> <!-- !card -->
   </main>
 </body>
-<script src="/js/projects.js"></script>
-
 </html>
