fix: My wife is the best; fixed lots of typos

--- a/content/_index.html
+++ b/content/_index.html
@@ -9,7 +9,7 @@ title = '/usr/philiph'
 
     <img src="/images/me.jpg" alt="Me" width="250" class="rounded-full mb-2">
     <p class="text-sm">Philip H.</p>
-    <p class="text-sm">Developper.</p>
+    <p class="text-sm">Developer.</p>
     <p class="text-sm">Educator.</p>
   </div>
 </div>
@@ -48,10 +48,10 @@ title = '/usr/philiph'
     <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
     </div>
     <time class="mb-1 text-sm text-nord-4">2018-2020</time>
-    <h3 class="text-lg font-semibold">Teacher's College @ York University</h3>
+    <h3 class="text-lg font-semibold">BEd @ York University</h3>
     <p class="mb-4 text-nord-4">
-      I completed my Bachelors In Education with the primary intention to emmerse myself in the study of pedagogy in
-      the hopes of changing the ways new developpers are on-boarded to new companies, tech-stacks and new ways of
+      I completed my Bachelors in Education with the primary intention to immerse myself in the study of pedagogy in
+      the hopes of changing the ways new developers are on-boarded to new companies, tech-stacks and new ways of
       thinking.
     </p>
   </li>
@@ -63,7 +63,7 @@ title = '/usr/philiph'
     <h3 class="text-lg font-semibold">Coding Teacher @ Reidmount Discovery Schools</h3>
     <p class="mb-4 text-nord-4">
       I began a new job as a Coding Teacher for <em>Reidmount Discovery Schools</em> teaching students between the
-      ages of 6 to 17 the fundamentals of coding, including concepts like computatoinal thinking, logic and problem
+      ages of 6 and 17 the fundamentals of coding, including concepts like computatoinal thinking, logic and problem
       solving, using Python and Unity.
     </p>
   </li>
@@ -74,9 +74,9 @@ title = '/usr/philiph'
     <time class="mb-1 text-sm text-nord-4">2013-2017</time>
     <h3 class="text-lg font-semibold">Undergrad in CS @ McMaster University</h3>
     <p class="mb-4 text-nord-4">
-      I studied Computer Science at McMaster university. During my time there, I was an undergraduate <em>TA</em>
+      I studied Computer Science at McMaster University. During my time there, I was an undergraduate <em>TA</em>
       for a first year intro to coding class, participated in Hack-a-thons, and completed a one year Capstone
-      projects focusing on Computer Vision and data interpretation to help make basketball players better at their
+      project focused on computer vision and data interpretation to help make basketball players better at their
       free throws.
     </p>
   </li>
@@ -85,7 +85,7 @@ title = '/usr/philiph'
     <div class="absolute w-3 h-3 bg-nord-8 rounded-full mt-1.5 -start-1.5 border border-nord-6">
     </div>
     <time class="mb-1 text-sm text-nord-4">2009-2013</time>
-    <h3 class="text-lg font-semibold">Highschool Student @ Cardinal Leger CSS</h3>
+    <h3 class="text-lg font-semibold">High school student @ Cardinal Leger CSS</h3>
     <p class="mb-4 text-nord-4">
       I fell in love with Computer Science at the age of 15 when I took the grade 11 ICS3U course in my grade 10
       year. In grade 10 I participated in the ECOO coding competition, and I would go on to compete in CCC, DWITE,
